--- a/biblio.bib
+++ b/biblio.bib
@@ -134,6 +134,48 @@
   eprinttype = {arXiv},
   eprint    = {1807.01281},
   timestamp = {Mon, 13 Aug 2018 16:48:08 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1807-01281.bib},
+  _biburl    = {https://dblp.org/rec/journals/corr/abs-1807-01281.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tsp/KarMP13,
+  author    = {Soummya Kar and
+               Jos{\'{e}} M. F. Moura and
+               H. Vincent Poor},
+  title     = {QD-Learning: {A} Collaborative Distributed Strategy for Multi-Agent
+               Reinforcement Learning Through \emph{Consensus} + \emph{Innovations}},
+  journal   = {{IEEE} Trans. Signal Process.},
+  volume    = {61},
+  number    = {7},
+  pages     = {1848--1862},
+  year      = {2013},
+  url       = {https://doi.org/10.1109/TSP.2013.2241057},
+  _doi       = {10.1109/TSP.2013.2241057},
+  timestamp = {Tue, 10 Mar 2020 10:55:14 +0100},
+  biburl    = {https://dblp.org/rec/journals/tsp/KarMP13.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icml/Tan93,
+  author    = {Ming Tan},
+  editor    = {Paul E. Utgoff},
+  title     = {Multi-Agent Reinforcement Learning: Independent versus Cooperative
+               Agents},
+  _booktitle = {Machine Learning, Proceedings of the Tenth International Conference,
+               University of Massachusetts, Amherst, MA, USA, June 27-29, 1993},
+  pages     = {330--337},
+  publisher = {Morgan Kaufmann},
+  year      = {1993},
+  url       = {https://doi.org/10.1016/b978-1-55860-307-3.50049-6},
+  doi       = {10.1016/b978-1-55860-307-3.50049-6},
+  timestamp = {Mon, 24 Jun 2019 15:47:45 +0200},
+  biburl    = {https://dblp.org/rec/conf/icml/Tan93.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@book{zai2020deep,
+  title={Deep reinforcement learning in action},
+  author={Zai, Alexander and Brown, Brandon},
+  year={2020},
+  publisher={Manning Publications}
 }
