--- a/collective-learning.tex
+++ b/collective-learning.tex
@@ -72,9 +72,9 @@
 \end{alertblock}
 \begin{alertblock}{Lecture goals}
 	\begin{itemize}
-		\item Understading the challenges related to the Multi-Agent System (MAS) domain
-		\item Show Patterns and Architecture applied in Collective Systems
-		\item Hands-on in some pratictal example of Collective Learning
+		\item Understanding the challenges related to the Multi-Agent System (MAS) domain
+		\item Show Techniques, Patterns, and Architecture applied in Collective Systems
+		\item Hands-on in some practical example of Collective Learning
 	\end{itemize}
 \end{alertblock}
 %
@@ -87,16 +87,16 @@
 \begin{exampleblock}{What have you seen so far \dots}
 	\begin{itemize}
 		\item Markov Decision Process (MDP) to model the agent-environment interactions
-		\item Find learning process that eventually lead to an \emph{optimal} policy $\pi^*$
-		\item Q-Learning (in general \emph{value-based approaches}) as a prominient algorithm case to reach converge
+		\item Find a learning process that eventually leads to an \emph{optimal} policy $\pi^*$
+		\item Q-Learning (in general \emph{value-based approaches}) as a prominent algorithm case to reach converge
 	\end{itemize}
 \end{exampleblock}
 \begin{alertblock}{\dots But this works only under some conditions}
 	\begin{itemize}
-		\item Reward hypothetesis
+		\item Reward hypothesis
 		\item Full environment observability and Markovian property
 		\item Stationary environment
-		\item State/Action space should be small enough to be stored in-memory (otherwise, we should leverage function aproximators)
+		\item State/Action space should be small enough to be stored in memory (otherwise, we should leverage function approximators)
 	\end{itemize}	
 \end{alertblock}
 \end{frame}
@@ -104,7 +104,7 @@
 \begin{frame}{Partial Observable environments}
 %/////////
 	\begin{alertblock}{Definition}
-		Agent does not have a \emph{perfect} and \emph{complete} knowledge perception of the state of the environment
+		An agent do not have a \emph{perfect} and \emph{complete} knowledge perception of the state of the environment
 	\end{alertblock}
 	\begin{exampleblock}{They are quite typical in (non-)complex systems}
 		\begin{itemize}
@@ -118,13 +118,13 @@
 \begin{frame}{Partial Observable Environments}
 	\begin{exampleblock}{Partial Observable MDP $\mathcal{P}$ (POMDP) \href{https://www.pomdp.org/}{\faLink}}
 		\begin{itemize}
-			\item Agent cannot directly observe the system state, but he can make an \emph{observation} that depend on this state
+			\item An agent cannot directly observe the system state, but he can make \emph{observations} that depend on this state
 			\item POMDP is a tuple $(S, A, T, R, \Omega, O)$
 			\item $S, A, T, R$ are the same variable described in MDP
-			\item $\Omega$ is the set of observation perceive by the agent $\{o_1, \dots, o_n\}$
+			\item $\Omega$ is the set of observations perceived by the agent $\{o_1, \dots, o_n\}$
 			\item $O$ is the set of conditional probability $O(o | s, a)$
 			\item I want to learn a policy that depends on $o$ but maximise a reward function that depends on $s$
-			\item The agents need to build a belif state from the observations history
+			\item The agents need to build a belief state from the history of the observations
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -133,13 +133,13 @@
 %/////////
 	\begin{alertblock}{Definition}
 		The environment model (e.g. the random variable associated with it) change 
-		over the time.
+		over time.
 	\end{alertblock}
 	\begin{exampleblock}{MDP are Stationary by definition \dots}
 		\begin{itemize}
-			\item \dots But, real-case environment dynamics could change over time (e.g. markets, city trafic, routing networks)
-			\item Pratically, it seems that RL works well even in this case (online learning)
-			\item \emph{But, we loose converge guarantee.}
+			\item \dots But, real-case environment dynamics could change over time (e.g. markets, city traffic, routing networks)
+			\item Practically, it seems that RL (in particular Temporal Difference (TD) methods) works well even in this case (online learning)
+			\item \emph{But, we lose convergence guarantees.}
 		\end{itemize}
 	\end{exampleblock}
 %
@@ -152,14 +152,14 @@
 %/////////
 \begin{frame}[c]{From Single-Agent To Multi-Agent}
 %/////////
-	\begin{alertblock}{Multi Agent Reinforcement Learning (MARL)}
+	\begin{alertblock}{Multi-Agent Reinforcement Learning (MARL)}
 		\centering
-		\emph{Multiple agents learn \textbf{togheter} the best a policy that maximise
+		\emph{Multiple agents learn \textbf{together} the best policy that maximises
 	a long term reward signal.}
 	\end{alertblock}
 	\begin{exampleblock}{Considerations}
 		\begin{itemize}
-			\item If multiple agent exist, but only \textbf{one} agent learn by experience, then it is a single agent problem (e.g. single player videogames)
+			\item If multiple agents exist, but only \textbf{one} agent learns by experience, then it is a single agent problem (e.g. single-player videogames)
 			\item So, MAS + Learning $\centernot\implies$ MARL, \textbf{but} MARL $\implies$ MAS
 		\end{itemize}
 	\end{exampleblock}
@@ -232,7 +232,7 @@
 	\end{exampleblock}
 	\begin{exampleblock}{Mixed}
 		\begin{itemize}
-			\item Agent can both compete and cooperate in order to maximise a global reward function
+			\item Agents can both compete and cooperate in order to maximise a global reward function
 			\item Also called \textit{General Sum games}
 		\end{itemize}
 	\end{exampleblock}
@@ -244,7 +244,7 @@
 			\item The overall goal is to find the best policy that is the same for each agent ($\pi^* = {\pi^{*}}_1 \dots {\pi^{*}}_N$)
 		\end{itemize}
 	\end{exampleblock}
-	\begin{exampleblock}{Heterogenoues}
+	\begin{exampleblock}{Heterogeneous}
 		\begin{itemize}
 			\item Each agent could have different capabilities (in the worst case, $A^1 \neq \dots \neq A^N$)
 			\item Each agent has its local policy that should be maximised following the global collective goal
@@ -254,13 +254,13 @@
 
 %/////////
 \begin{frame}{MARL Systems: Learning Scheme}
-	\begin{exampleblock}{Cetralised Learning and Centralised Execution}
+	\begin{exampleblock}{Centralised Learning and Centralised Execution}
 		\begin{itemize}
 			\item \emph{One} agent with a global view of the system (in the cloud? in a server?)
-			\item Node send their perception to that Node
-			\item With them, it create a global state of the system
+			\item Nodes send their perception to that central agent
+			\item With this perceptions, it creates a global state of the system
 			\item With the current policy, it chooses the action that nodes should performance and send to them (\emph{Control})
-			\item In the next time step, it evaluates the reward function and update the policy accordingly (\emph{Learn})
+			\item In the next time step, it evaluates the reward function and updates the policy accordingly (\emph{Learn})
 			\item \emph{Are the nodes agents?}
 			\item Both used in offline and pure-online setting
 		\end{itemize}
@@ -274,9 +274,9 @@
 	
 	\begin{exampleblock}{Decentralised Learning and Distributed Execution}
 		\begin{itemize}
-			\item Each nodes has their local policy/value table
+			\item Each node has its local policy/value table
 			\item They can perceive the environment state (or can observe a part of it)
-			\item With the current state, they performance an action (\emph{Control})
+			\item With the current state, they perform an action following their local policy (\emph{Control})
 			\item In the next time step, they update their policy following a local reward function 
 			\item Both used in offline and pure-online setting
 		\end{itemize}
@@ -287,20 +287,20 @@
 	
 	\begin{exampleblock}{Centralised Learning and Distributed Execution}
 		\begin{itemize}
-			\item A offline-learning online execution patterns
+			\item An offline-learning online execution pattern
 			\item \emph{Simulation time}
 			\begin{itemize}
 				\item Each node follow the typical $o_t, a_t, o_{t+1}, a_{t+1},\dots $ trajectory using a local policy
-				\item After an episode, this trajectory (or something dirived from it) will be sent to a central learner
+				\item After an episode, this trajectory (or something derived from it) will be sent to a central learner
 				\item It, using a global view of the system, improve the policies of the agents 
-				\item At the end of the traning phase, the policy will be shared to the agent s
+				\item At the end of the training phase, the policy will be shared with the agents
 			\end{itemize} 
 			\item \emph{Execution time}
 				\begin{itemize}
 					\item Each agent has the local policy distilled during the simulation time
 					\item With it, they act in the environment
 				\end{itemize}
-			\item A semplific description, more elaborate Techniques exists (i.e. agents share the gradient to the central leaner)
+			\item A simplistic description, more elaborate techniques exists (i.e. agents share the gradient to the central leaner)
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -311,8 +311,8 @@
 \begin{exampleblock}{}
 	\begin{itemize}
 		\item The collective goal could be accomplished through competition and/or cooperation 
-		\item The system could be heterogenoues or homogeneous
-		\item The agent numers is not bounded (openness)
+		\item The system could be heterogeneous or homogeneous
+		\item The agent number is not bounded (openness)
 		\item Distributed control -- i.e. no central authority exists
 	\end{itemize}
 \end{exampleblock}
@@ -325,32 +325,32 @@
 	\begin{alertblock}{Learning in CASs make the environments non-stationary}
 		Each agent learns concurrently $\implies$ by the eye of the other agent the environment is in continuous changes.
 	\end{alertblock}
-	\begin{alertblock}{Course of dimensionality -- MAS combinatorial nature}
+	\begin{alertblock}{The course of dimensionality -- MAS combinatorial nature}
 		When we have to deal with a large number of agents, the overall state-action space is increasing exponentially to the number of agents --- so a central learner cannot solve the learning problem.
 	\end{alertblock}
 \end{frame}
 %/////////
 \begin{frame}[c]{Learning in CAS: Challenges}
-	\begin{exampleblock}{Multi-Agent credit assigment problem}
-		Tipycally, in CAS, a global reward function exisist. But it is hard to understand the influence of a single agent to
+	\begin{exampleblock}{Multi-Agent credit assignment problem}
+		Typically, in CAS, a global reward function exists. But it is hard to understand the influence of a single agent to
 		the overall collective behaviour.
 	\end{exampleblock}
 	\begin{exampleblock}{A lack of a global clock}
 		CASs are distributed systems $\implies$ a global synchronization clock does not exist, making the standard
-		Stachocastic game model quinte inaquate.
+		Stachocastic game model quite inadequate.
 	\end{exampleblock}
-	\begin{exampleblock}{Sample efficency}
+	\begin{exampleblock}{Sample efficiency}
 		Action-space and state-space are very large in CASs $\implies$ the problem of sample efficiency (i.e. how many samples does the RL need to reach a good policy?)
 		arise as in the Deep Learning context. 
 	\end{exampleblock}
 \end{frame}
 
-\begin{frame}{On sample efficency: Example of learning time }
-	\begin{exampleblock}{A Nowadays problem..}
+\begin{frame}{On sample efficiency: Example of learning time }
+	\begin{exampleblock}{A Nowadays problem \dots}
 		\begin{itemize}
 			\item Nowadays, Deep Learning Techniques are used to train complex neural networks
-			\item When applied to Reinforcement Learning, the traning phase requires millions of interactions for an agent to learn
-			\item In the Multi Agent Setting is even worst..
+			\item When applied to Reinforcement Learning, the training phase requires millions of interactions for an agent to learn
+			\item In the Multi-Agent Setting is even worst \dots
 			\item In~\cite{DBLP:journals/corr/abs-1807-01281} they train 30 agents in 450k games!
 		\end{itemize}
 	\end{exampleblock}
@@ -361,7 +361,7 @@
 			\item A central agent (i.e. in the cloud? In a server?) see the entire system
 			\item Standard RL algorithm (tabular) create a table with the size of $|S \times A|$
 			\item But the system-wide action space is the cartesian product of the agent action-space, so the A cardinality is $|A|^N$
-			\item With 100 agents, we already reach an action space with more action than the particle in the universe.
+			\item With 100 agents,we have already reached an action space with more action then the particle in the universe.
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -369,15 +369,15 @@
 \begin{frame}{Learning in CAS: Our today focus}
 	\begin{alertblock}{Constraints}
 		\begin{itemize}
-			\item Learning in cooperative systems: i.e. each entity share the same reward fuctions
-			\item Learning in homogeneous systems: i.e. each entity is interchangable with each other
-			\item We consider partial observability not as a core problem
+			\item Learning in cooperative systems: i.e. each entity share the same reward functions
+			\item Learning in homogeneous systems: i.e. each entity is interchangeable with each other
+			\item We do not consider partial observability as a core problem
 		\end{itemize}
 	\end{alertblock}
 	\begin{exampleblock}{Homogenous system: Implications}
 		\begin{itemize}
 			\item The optimal policy is the same for the whole system
-			\item During the learning, the system can use different policy (e.g. to reduce sample efficency)
+			\item During the learning, the system can use different policies (e.g. to reduce sample efficiency)
 			\item We reduce the action space
 			\item We reduce the non-stationarity problem
 		\end{itemize}
@@ -404,16 +404,16 @@
 	%\end{exampleblock}
 	\begin{exampleblock}{Dec-POMDP \href{http://rbr.cs.umass.edu/camato/decpomdp/overview.html}{\faLink}}
 		\begin{itemize}
-			\item Extension of POMDP to Multi Agent settings
+			\item Extension of POMDP to Multi-Agent settings
 			\item N agent act in a Markovian environment \emph{but} they perceive only partial information about it (observations)
 			\item[\faExclamation] Does not consider homogeneity
 		\end{itemize}
 	\end{exampleblock}
 	\begin{exampleblock}{SwarMDP~\footnote[frame]{\fullcite{DBLP:journals/corr/SosicKZK16}}}
 		\begin{itemize}
-			\item Consider an homogeneous population of agents (i.e. same action, observation space and same policy)
-			\item Learning lead to single policy that map observation (not history) to action
-			\item[\faExclamation] Time continuinig to be synchrnous
+			\item Consider a homogeneous population of agents (i.e. same action, observation space and same policy)
+			\item Learning lead to a single policy that map observation (not history) to action
+			\item[\faExclamation] Time continuing to be synchronous
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -422,30 +422,30 @@
 	\begin{exampleblock}{}		
 		\begin{itemize}
 			\item Each agent is seen as a tuple $(M, \mathcal{N})$
-			\item $M$ is a local markov decision process ($S$ is an observation space in common with the entire system)
+			\item $M$ is a local Markov decision process ($S$ is an observation space in common with the entire system)
 			\item The global state system state is unknown
-			\item Agents want to learn a policy $\pi(a | s, \mathcal{N})$ to share to the entire system
-			\item When agent does not consider neighbours, we call the system as \emph{Independent learners}
-			\item When agent consider neighbours action to choose their local action, we call the system as \emph{Joint action learners} 
+			\item Agents want to learn a policy $\pi(a | s, \mathcal{N})$ to share with the entire system
+			\item When agents do not consider neighbours, we call the system as \emph{Independent learners}
+			\item When agents consider neighbours actions to choose their local action, we call the system \emph{Joint action learners} 
 		
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
 
-\begin{frame}{Learning in CAS: Can we use standard RL algorithm?}
+\begin{frame}{Learning in CAS: Can we use standard RL algorithms?}
 	\begin{exampleblock}{In a centralised learning decentralised execution settings}
 		\begin{itemize}
 			\item Each agent explore the environment with the same policy $\phi$
-			\item A central learners improve the policy following the agents perception
-			\item When a \emph{good} policy is found, it is deployed in a real system
-			\item Then, the central learner it is not require anymore
+			\item Central learners improve the policy following the agents' perceptions
+			\item When a \emph{good} policy is found, it is deployed in a concrete system
+			\item Then, the central learner is not required anymore
 
 		\end{itemize}
 	\end{exampleblock}
 	\begin{exampleblock}{\emph{Ideally} yes \dots}
 		\begin{itemize}
-			\item \dots But this allow only offline learning
-			\item This pratically lead to lazy agent -- the exploration part is limited 
+			\item \dots But this allows only offline learning
+			\item This practically lead to lazy agent -- the exploration part is limited 
 			\item Does not consider other agent actions -- each agent act independently from each other
 		\end{itemize}
 	\end{exampleblock}
@@ -455,10 +455,10 @@
 \begin{frame}{Independent Learners}
 	\begin{exampleblock}{Configuration}
 		\begin{itemize}
-			\item Each agent learn concurrently an optimal local policy
-			\item This lead to the global optimal policies as an emergent behaviour
-			\item The homogeneity is driven by the same reward function and action/observation spaces
-			\item More agent lead to a more exploration
+			\item Each agent concurrently learns an optimal local policy
+			\item This led to the global optimal policies as an emergent behaviour
+			\item The homogeneity is driven by the same reward function and the same action/observation spaces
+			\item More agent $\implies$ more exploration
 			\item Not converge to global optimum, but good pratical performance are founded in various works: \cite{DBLP:conf/atal/TumerA07, DBLP:conf/atal/TumerAW02, DBLP:conf/iros/WangS06}
 		\end{itemize}
 	\end{exampleblock}
@@ -466,10 +466,10 @@
 \begin{frame}{Independent Learners}
 	\begin{exampleblock}{Implications}
 		\begin{itemize}
-			\item [{\color{teal} \faThumbsUp}] \emph{Scalable}: the learning algorithm does not depend to the system size
-			\item [{\color{teal} \faThumbsUp}] \emph{Easy to implement}: the algorithm are the same developed for single agent context
+			\item [{\color{teal} \faThumbsUp}] \emph{Scalable}: the learning algorithm does not depend on the system size
+			\item [{\color{teal} \faThumbsUp}] \emph{Easy to implement}: the algorithm is the same developed for single agent context
 			\item [{\color{teal} \faThumbsUp}] \emph{Offline and Online}: Can be used both at simulation time or at runtime
-			\item [{\color{red} \faThumbsDown}] \emph{Increase non-stationarity}: the environment dynamics change continously as the agent learn new policy
+			\item [{\color{red} \faThumbsDown}] \emph{Increase non-stationarity}: the environment dynamics change continuously as the agent learns a new policy
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -481,9 +481,9 @@
 
 	\begin{exampleblock}{Considerations}
 		\begin{itemize}
-			\item[{\color{teal} \faThumbsUp}] Simplest extension of Q-Learning into the multi agent domain
+			\item[{\color{teal} \faThumbsUp}] Simplest extension of Q-Learning into the Multi-Agent domain
 			\item[{\color{red} \faThumbsDown}] Need to use Greedy in the Limit of Infinite Exploration (GLIE) policy to reach good performance
-			\item[{\color{red} \faThumbsDown}] Complex and aplication dependant parameter tuning
+			\item[{\color{red} \faThumbsDown}] Complex and application dependant parameter tuning
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -491,10 +491,10 @@
 \begin{frame}{Hysteretic Q-Learning\footnote[frame]{\fullcite{matignon2007hysteretic}}}
 	\begin{alertblock}{Idea}
 		\begin{itemize}
-			\item Decentralised Q-Learning does not take in consideration non-stationarity problem
-			\item An idea could be to apply a \emph{correction} factor that reduce the non-stationarity born for the concurrent learning
-			\item Hysteretic Q-Learning uses an \emph{hysteresis} heurestic to handle this problem
-			\item It suppose an optimistic behaviour, giving more weight to good action then the bad action (\emph{due to the exploration of nearby agents})
+			\item Decentralised Q-Learning does not take into consideration non-stationarity problem
+			\item An idea could be to apply a \emph{correction} factor that reduces the non-stationarity born for the concurrent learning
+			\item Hysteretic Q-Learning uses a \emph{hysteresis} heuristic to handle this problem
+			\item It supposes an optimistic behaviour, giving more weight to good action then the bad actions (\emph{due to the exploration of nearby agents})
 		\end{itemize}
 	\end{alertblock}
 \end{frame}
@@ -502,7 +502,7 @@
 \begin{frame}{Hysteretic Q-Learning}
 	\begin{exampleblock}{Implementation}
 		\begin{itemize}
-			\item Use two learning factor, $\alpha$ and $\beta$, with $\alpha > \beta$
+			\item Use two learning factors, $\alpha$ and $\beta$, with $\alpha > \beta$
 			\item The Q update is evaluated to consider the goodness of an action/space pair: $\delta(s, a) = r_t + \gamma * argmax_{a'}Q(s', a') - Q(s_t, a_t)$
 			\item When $\delta > 0$ it means that we improve our experience, so we use $\alpha$ as learning rate, $\beta$ otherwise
 			\item The Q update became: $ Q(s_t, a_t) =
@@ -517,10 +517,10 @@
 \begin{frame}{Hysteretic Q-Learning}
 	\begin{exampleblock}{Idea}
 		\begin{itemize}{}
-			\item[{\color{teal} \faThumbsUp}] It improve standard Q-Learning performance without adding more complexity
+			\item[{\color{teal} \faThumbsUp}] It improves standard Q-Learning performance without adding more complexity
 			\item[{\color{teal} \faThumbsUp}] It is currently used in Deep Reinforcement Learning to handle complex System
-			\item[{\color{red} \faThumbsDown}] It is an heurestic, so it does not have any theoretical guarantes
-			\item Other extension follow this idea and suffer from the same pros and cons. The most famous are Distributed Q-Learning, Lenient Q-Learning, Win-Or-Learn-fast
+			\item[{\color{red} \faThumbsDown}] It is a heuristic, so it does not have any theoretical guarantees
+			\item Other extensions follow this idea and suffer from the same pros and cons. The most famous are Distributed Q-Learning, Lenient Q-Learning, Win-Or-Learn-fast
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -528,10 +528,10 @@
 \begin{frame}{QD-Learning\footnote[frame]{\fullcite{DBLP:journals/tsp/KarMP13}}}
 	\begin{exampleblock}{Idea}
 		\begin{itemize}
-			\item Each agent know it local actions and can communicate only with a restricted neighbourhood
-			\item The Q update depends on the Q values of the neighbours
-			\item To do that, the system mantain the Q table of different time step.
-			\item Q are indexed with: $Q^i_t$ (in english: the Q table of the agent $i$ at the time step $t$)
+			\item Each agent know its local actions and can communicate only with a restricted neighbourhood
+			\item The Q update depends on the Q-values of the neighbours
+			\item To do that, the system mantains Q-tables of different time steps.
+			\item Q-tables are indexed with: $Q^i_t$ (in English: the Q-table of the agent $i$ at the time step $t$)
 			\item It uses \emph{innovation} and \emph{consensus}
 			
 		\end{itemize}		
@@ -549,7 +549,7 @@
 	\end{exampleblock}
 	\begin{alertblock}{Discussion}
 		\begin{itemize}
-			\item[{\color{teal} \faThumbsUp}] It is shown that it converge asymptotically to an optimal policy \dots
+			\item[{\color{teal} \faThumbsUp}] It is shown that it converges asymptotically to an optimal policy \dots
 			\item[{\color{red} \faThumbsDown}]\dots under constraints of networks connection
 			\item[{\color{red} \faThumbsDown}]\dots with full state observability
 			\item[{\color{red} \faThumbsDown}]\dots with specific constraints on $\alpha$ and $\beta$ 
@@ -563,10 +563,10 @@
 	\begin{alertblock}{From Independent to Joint actions}	
 		\begin{itemize}
 			\item Independent learners tend to make the environment highly non-stationarity
-			\item Futhermore, they do not consider other agents $\leftarrow$ collective behaviour through emergence (at exception of QD-learning)
-			\item Ideally, we can reduce non-stationarity and we want to consider other agents by creating policy that observe other agents actions (tipycally denoted by: $\pi_{i,\mathcal{N}}$))
+			\item Furthermore, they do not consider other agents $\leftarrow$ collective behaviour through emergence (QD-learning is an exception)
+			\item Ideally, we can reduce non-stationarity and we want to consider other agents by creating policies that observe other agents actions (typically denoted by: $\pi_{i,\mathcal{N}}$))
 			\item This does not scale with the agent population.
-			\item A possibility to reduce the space is to consider only the neighbours (in a tipycally CAS settings)
+			\item A possibility to reduce the space is to consider only the neighbours (in a typically CAS settings)
 		\end{itemize}
 	\end{alertblock}
 \end{frame}
@@ -574,7 +574,7 @@
 \begin{frame}{Neighbourhood Q-Learning\footnote{\fullcite{zai2020deep}}}
 	\begin{exampleblock}{}
 		\begin{itemize}
-			\item Q-Learning mixed with Joint-action spaces
+			\item Q-Learning mixed with Joint action spaces
 			\item Each agent improve a Q-function consider also the action taken by the neighbourhood ($a_{\mathcal{N}}$)
 			\item A way to handle that, it to consider the state as $k_t = (s, a_{\mathcal{N}})$
 			\item $Q(k_t, a) = Q(s, a_{-1}) + \alpha * (r_t + \gamma * argmax_{a'}Q(k', a'))$
@@ -583,19 +583,19 @@
 
 	\begin{exampleblock}{Implications}
 		\begin{itemize}
-			\item[{\color{teal}\faThumbsUp}] Consider neighbourhood actions $\implies$  reduce non-stationarity problem 
-			\item[{\color{red}\faThumbsDown}] Q depends on agent neighbourhood $\implies$ the Q table size increase \emph{exponentially} with the neighbourhood
+			\item[{\color{teal}\faThumbsUp}] Consider neighbourhood actions $\implies$ reduce the non-stationarity problem 
+			\item[{\color{red}\faThumbsDown}] Q-table depends on agent neighbourhood $\implies$ the Q-table size increase \emph{exponentially} with the neighbourhood
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
 %===============================================================================
-\begin{frame}{"Just" a scartch to the surface :)}
+\begin{frame}{"Just" a scratch to the surface :)}
 	\begin{exampleblock}{A recap}
 		\begin{itemize}
 			\item The approaches handle only partially the collective learning problem (scalability, cooperative, non-stationarity)
 			\item They are used nowadays but in combination with other approaches (neural networks, reply buffer, differential reward) \dots
-			\item \dots But today no a theretical solution exists yet for large scale collective learning
-			\item Note: we do not conver the "game theoretical" background, current main interest in literature (\emph{problem} consider few agents)
+			\item \dots But today no theoretical solutions exists yet for large scale collective learning
+			\item Note: we do not cover the "game theoretical" background $\leftarrow$ it is current the main interest in literature (\emph{problem} $$\implies$$ these works consider few agents)
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -604,11 +604,11 @@
 \begin{frame}{State of the art: on advanced topics}
 	\begin{exampleblock}{Deep Learning as a mechanism to solve complex tasks}
 		\begin{itemize}
-			\item Nowadays, Deep Learning architecture are typically used in MARL
-			\item For handling non-stationarity, \emph{actor-critic} methodology are used
+			\item Nowadays, Deep Learning architectures are typically used in MARL
+			\item For handling non-stationarity, \emph{actor-critic} methodologies are used
 			\item For handling partial-observability, \emph{recurrent} networks are applied
-			\item For handling large-state/action space, \emph{deep architecture} are considered
-			\item[{\color{red}\faThumbsDown}] are all \emph{heurestic} $\implies$ some approach could does not work in different aplication
+			\item For handling large-state/action space, \emph{deep architectures} are considered
+			\item[{\color{red}\faThumbsDown}] are all \emph{heuristic} $\implies$ some approach could do not work in different application
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -618,8 +618,8 @@
 		\begin{itemize}
 			\item What we see so far are \emph{value-based} methods $\implies$ learn value function that guide the agent's policy
 			\item[\faLightbulbO] Why we cannot learn the policy \emph{directly}?
-			\item In some case, the value function could be very complex but not the policy
-			\item Futhermore, value-based method lead to determistic policy, but in some case only a \emph{stochastic} policy is the best one (e.g. in Rock paper scissor)
+			\item In some cases, the value function could be very complex but not the policy one
+			\item Furthermore, value-based methods led to determistic policy, but in some cases only a \emph{stochastic} policy is the best one (e.g. in Rock paper scissor)
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -628,7 +628,7 @@
 
 	\begin{alertblock}{Idea}
 		\begin{itemize}
-			\item Optimizing the policy ($ \pi(a | s, \theta) $) w.r.t the exceptected return by gradient descent (or ascent).
+			\item Optimizing the policy ($ \pi(a | s, \theta) $) w.r.t the expected return by gradient descent (or ascent).
 			\item $\pi(a | s, \theta)$ is read as: the probability of the action $a$ knowing the state $s$ and the weight $\theta$
 			\item Generally, the loss function is described as: $J(\theta) = E{\sum_{i = 0}^T}(\gamma * R_i)$
 			\item The weight then, are updated as: $ \theta_{t+1} = \theta_t + \alpha \nabla J(\theta_t) $ $\implies$ standard Stachocastic gradient descent (ascent)
@@ -638,7 +638,7 @@
 	\begin{exampleblock}{Considerations}
 		\begin{itemize}
 			\item[{\color{teal} \faThumbsUp}] Convergence proof to local optimal
-			\item[{\color{red}} \faThumbsDown] Tends to have high variance (overfitting)
+			\item[{\color{red}} \faThumbsDown] Tends to have high bias (underfitting)
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -648,7 +648,7 @@
 		\begin{itemize}
 			\item Combine Policy Gradient and Value-Based Methods
 			\item The Critic (the value function) is updated like standard value approaches (e.g. TD errors)
-			\item The actor (the policy) is updated using the policy gradient update based on the critic estimation
+			\item The Actor (the policy) is updated using the policy gradient update based on the Critic estimation
 		\end{itemize}
 	\end{alertblock}
 	\begin{figure}
@@ -659,10 +659,10 @@
 \begin{frame}{On Actor-Critic: MARL settings}
 	\begin{alertblock}{Idea}
 		\begin{itemize}
-			\item The Actor are local policy, that take observation as input and return local action
+			\item The Actor is a local shared policy that takes observations as input and returns local actions
 			\item The Critic instead, is placed in a central server
-			\item The Critic have a global view of the system $\implies$ it could use overall state information 
-			\item The Actor is then influenced with global data, but at \emph{deployment} time it does not use it
+			\item The Critic has a global view of the system $\implies$ it could use overall state information 
+			\item The Actor is then influenced by global data, but at \emph{deployment} time it does not use them
 		\end{itemize}
 	\end{alertblock}
 	\begin{exampleblock}{Considerations}
@@ -678,9 +678,9 @@
 		\begin{itemize}
 			\item As I mentioned, CAS are partially observable \dots
 			\item \dots But the methods proposed does not handle this matter in any sense
-			\item Recurrent Neural Network (i.e. Neural Network with \emph{memory}) are an emergent trend to handle this issues
-			\item In MAS settings, RNNs and Hysteretic update are used togheter to handle both non-stationarity and partial observability
-			\item[{\color{red} \faThumbsDown}] It is not clear if RNNs are really a solution for Partial Observability
+			\item Recurrent Neural Networks (i.e. Neural Networks with \emph{memory}) are an emergent trend to handle this issue
+			\item In MAS settings, RNNs and Hysteretic updates are used together to handle both non-stationarity and partial observability
+			\item[{\color{red} \faThumbsDown}] It is not clear if RNNs are a solution for Partial Observability
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -688,23 +688,23 @@
 \begin{frame}{Handling large scale systems}
 	\begin{exampleblock}{}
 		\begin{itemize}
-			\item Agent size was not a central problem in first MARL works
-			\item Independent learners are typically deployed when we have to deal with several agent \dots
+			\item Agent size was not a central problem in the first MARL works
+			\item Independent learners are typically deployed when we have to deal with several agents \dots
 			\item \dots but it makes the learning process noising
-			\item Lately, a novel trend consist in the Mean Field Reinforcement Learning
+			\item Lately, a novel trend emerges to handle this problem, the so-called Mean-Field Reinforcement Learning
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
 
-\begin{frame}{Handling large scale systems: On Mean Field Reinforcement Learning}
+\begin{frame}{Handling large scale systems: On Mean-Field Reinforcement Learning}
 	\begin{exampleblock}{}
 		\begin{itemize}
 			\item The learning problem is set up as a joint action learners
-			\item In mean field, the system in model as two agent, the main agent and the rest 
+			\item In Mean-Field, the system in modelled as two agent, the main agent and the rest 
 			\item In Mean Field Reinforcement Learning, the rest is computed as the mean action taken by the neighbourhood
-			\item[{\color{teal}\faThumbsUp}] It has theoretical guarantee
+			\item[{\color{teal}\faThumbsUp}] It has theoretical guarantees
 			\item[{\color{teal}\faThumbsUp}] It is easily used also in CAS
-			\item[{{\color{red}\faThumbsDown}}] The approaches proposed are offline --- no online adaptiation.
+			\item[{{\color{red}\faThumbsDown}}] The approaches proposed are offline --- no online adaptation.
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -713,11 +713,11 @@
 	\begin{exampleblock}{}
 		\begin{itemize}
 			\item In CAS settings, typically we have a global reward function
-			\item[{\color{red} \faThumbsDown}] It is hard to understand the influence of an agent action to that signal
-			\item This is know as Multi-Agent credit assignment problem
-			\item It is tackle in COIN approach (i.e. differential reward) \dots
-			\item \dots but is require to run several simulation to understand each agent influence
-			\item COMA is a novel approach that uses a Actor-Critic setting with a contrafacutal baseline 
+			\item[{\color{red} \faThumbsDown}] It is hard to understand the influence of the agent action on that signal
+			\item This is known as Multi-Agent credit assignment problem
+			\item It is tackled in COIN approach (i.e. differential reward) \dots
+			\item \dots but it required to run several simulations to understand each agent influence
+			\item COMA is a novel approach that uses an Actor-Critic setting with a contrafacutal baseline 
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -725,8 +725,8 @@
 \begin{frame}{Not explored issue: Global clock}
 	\begin{exampleblock}{}
 		\begin{itemize}
-			\item Works on Multi Agent Reinforcement Learning consider Stochastic games as the environments model
-			\item There, agents action synchrnously, i.e. at the time step t+1 all agents have done their action
+			\item Works on Multi-Agent Reinforcement Learning consider Stochastic games as the model of the environment
+			\item There, agents action synchronously, i.e. at the time step t+1 all agents have done their action
 			\item This is impossible to assume in CAS
 			\item Any ideas? Lamport logical clock?
 		\end{itemize}
